--- a/terms.html
+++ b/terms.html
@@ -1,140 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Terms of Service – Shift Studios</title>
-  <meta name="description" content="Official Terms of Service for Shift Studios covering eligibility, acceptable use, purchases, subscriptions, IP, privacy, disclaimers, liability, termination, changes, governing law, and contact." />
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;margin:0;padding:40px;max-width:900px}
-    h1,h2,h3{line-height:1.25}
-    h1{font-size:2rem;margin-bottom:0.5rem}
-    h2{font-size:1.35rem;margin-top:2rem}
-    h3{font-size:1.05rem;margin-top:1rem}
-    hr{border:none;border-top:1px solid #ddd;margin:24px 0}
-    a{color:#0b57d0;text-decoration:underline}
-    ul{padding-left:1.25rem}
-    .muted{color:#666;font-size:0.95rem}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service - Shift</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #fff;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 60px 40px;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: 400;
+            color: #1a1a1a;
+            margin-bottom: 50px;
+            text-align: center;
+            letter-spacing: -0.02em;
+        }
+
+        h2 {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #1a1a1a;
+            margin-top: 40px;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            font-size: 0.95rem;
+            font-weight: 600;
+            color: #1a1a1a;
+            margin-top: 25px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 0.95rem;
+            color: #666;
+            margin-bottom: 15px;
+            line-height: 1.7;
+        }
+
+        .intro {
+            margin-bottom: 40px;
+        }
+
+        .intro p:first-child {
+            color: #1a1a1a;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        .intro p:nth-child(2) {
+            font-size: 0.85rem;
+            color: #999;
+            margin-bottom: 20px;
+        }
+
+        ul {
+            margin-left: 20px;
+            margin-bottom: 15px;
+        }
+
+        li {
+            font-size: 0.95rem;
+            color: #666;
+            margin-bottom: 8px;
+            line-height: 1.7;
+        }
+
+        .section {
+            margin-bottom: 35px;
+        }
+
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 40px 20px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>Terms of Service</h1>
-  <p class="muted">Last Updated: July 30, 2025</p>
+    <div class="container">
+        <h1>Terms of service</h1>
 
-  <p>Welcome to Shift. These Terms of Service (“Terms”) govern your access to and use of the Shift mobile application (the “App”), our website (the “Site”), and any related services (together, the “Services”), operated by Shift Studios (“Shift,” “we,” “us,” or “our”).</p>
-  <p>By using the Services, you agree to these Terms. If you do not agree, you may not use the Services.</p>
+        <div class="intro">
+            <p>Terms of Service</p>
+            <p>Last Updated: July 30, 2025</p>
+            <p>Welcome to Shift. These Terms of Service ("Terms") govern your access to and use of the Shift mobile application (the "App"), our website (the "Site"), and any related services (together, the "Services"), operated by Shift Studios. ("Shift," "we," "us," or "our").</p>
+            <p>By using the Services, you agree to these Terms. If you do not agree, you may not use the Services.</p>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>1. Eligibility</h2>
+            <h3>Who Can Use Shift</h3>
+            <p>To use our Services, you must be at least the age of majority in your jurisdiction or have consent from a parent or guardian. By using the Services, you represent and warrant that you meet these requirements.</p>
+        </div>
 
-  <h2>1. Eligibility</h2>
-  <h3>Who Can Use Shift</h3>
-  <p>To use our Services, you must be at least the age of majority in your jurisdiction or have consent from a parent or guardian. By using the Services, you represent and warrant that you meet these requirements.</p>
+        <div class="section">
+            <h2>2. Use of the Services</h2>
+            <h3>A. Shopify Website</h3>
+            <p>The Site, hosted by Shopify, enables you to browse and purchase Shift products, including the Shift Tag. All purchases made through the Site are subject to our shipping, return, and refund policies, which are presented during checkout and incorporated into these Terms.</p>
 
-  <hr />
+            <h3>B. Shift Mobile App</h3>
+            <p>The Shift App allows you to:</p>
+            <ul>
+                <li>Initiate and end focus sessions</li>
+                <li>Block access to selected apps</li>
+                <li>Track time saved and app interaction attempts</li>
+                <li>View streaks and statistics</li>
+                <li>Trigger focus mode using NFC tags</li>
+            </ul>
+            <p>Some features may require permission to access system-level services (e.g., Screen Time, App Usage, NFC, Notifications). Granting such permissions is optional, but certain functions may not work without them.</p>
+            <p>We reserve the right to modify, suspend, or discontinue the App or any features at any time without notice.</p>
+        </div>
 
-  <h2>2. Use of the Services</h2>
-  <h3>A. Shopify Website</h3>
-  <p>The Site, hosted by Shopify, enables you to browse and purchase Shift products, including the Shift Tag. All purchases made through the Site are subject to our shipping, return, and refund policies, which are presented during checkout and incorporated into these Terms.</p>
-  <h3>B. Shift Mobile App</h3>
-  <p>The Shift App allows you to:</p>
-  <ul>
-    <li>Initiate and end focus sessions</li>
-    <li>Block access to selected apps</li>
-    <li>Track time saved and app interaction attempts</li>
-    <li>View streaks and statistics</li>
-    <li>Trigger focus mode using NFC tags</li>
-  </ul>
-  <p>Some features may require permission to access system-level services (e.g., Screen Time, App Usage, NFC, Notifications). Granting such permissions is optional, but certain functions may not work without them.</p>
-  <p>We reserve the right to modify, suspend, or discontinue the App or any features at any time without notice.</p>
+        <div class="section">
+            <h2>3. Account Registration</h2>
+            <h3>Creating an Account</h3>
+            <p>You may be required to create an account or sign in with Apple ID to access certain features. You are responsible for maintaining the confidentiality of your credentials and for all activity under your account.</p>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>4. Purchases and Subscriptions</h2>
+            <h3>Orders and Pricing</h3>
+            <p>Prices for products or services (including in-app purchases or subscriptions) are listed on the Site or App. All prices are subject to change without notice.</p>
 
-  <h2>3. Account Registration</h2>
-  <h3>Creating an Account</h3>
-  <p>You may be required to create an account or sign in with Apple ID to access certain features. You are responsible for maintaining the confidentiality of your credentials and for all activity under your account.</p>
+            <h3>Payments</h3>
+            <p>By completing a purchase, you agree to pay all applicable charges, taxes, and fees. You authorize Shift or our third-party payment processors to charge your selected payment method.</p>
+            <p>If subscription services are offered, you agree to recurring billing under the terms disclosed at the time of purchase.</p>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>5. Acceptable Use</h2>
+            <h3>Usage Rules</h3>
+            <p>You agree not to:</p>
+            <ul>
+                <li>Violate laws or regulations</li>
+                <li>Circumvent app-blocking mechanisms</li>
+                <li>Tamper with or reverse-engineer any part of the Services</li>
+                <li>Engage in fraudulent, harmful, or abusive behavior</li>
+                <li>Interfere with the integrity or performance of the Services</li>
+            </ul>
+        </div>
 
-  <h2>4. Purchases and Subscriptions</h2>
-  <h3>Orders and Pricing</h3>
-  <p>Prices for products or services (including in-app purchases or subscriptions) are listed on the Site or App. All prices are subject to change without notice.</p>
-  <h3>Payments</h3>
-  <p>By completing a purchase, you agree to pay all applicable charges, taxes, and fees. You authorize Shift or our third-party payment processors to charge your selected payment method.</p>
-  <p>If subscription services are offered, you agree to recurring billing under the terms disclosed at the time of purchase.</p>
+        <div class="section">
+            <h2>6. Intellectual Property</h2>
+            <h3>Ownership and License</h3>
+            <p>All content, trademarks, designs, and software on the App or Site are the property of Shift Studios Ltd. or our licensors.</p>
+            <p>You are granted a limited, non-exclusive, non-transferable, and revocable license to use the App and Site for personal, non-commercial purposes only.</p>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>7. Privacy</h2>
+            <h3>Data Practices</h3>
+            <p>Your use of the Services is subject to our Privacy Policy, which explains how we collect, use, and safeguard your personal data. By using the Services, you consent to the processing of your information in accordance with that policy.</p>
+        </div>
 
-  <h2>5. Acceptable Use</h2>
-  <h3>Usage Rules</h3>
-  <p>You agree not to:</p>
-  <ul>
-    <li>Violate laws or regulations</li>
-    <li>Circumvent app-blocking mechanisms</li>
-    <li>Tamper with or reverse-engineer any part of the Services</li>
-    <li>Engage in fraudulent, harmful, or abusive behavior</li>
-    <li>Interfere with the integrity or performance of the Services</li>
-  </ul>
+        <div class="section">
+            <h2>8. Disclaimers</h2>
+            <h3>Important Notices</h3>
+            <ul>
+                <li>The Shift App is a productivity tool, not a mental health or medical service.</li>
+                <li>We do not guarantee that all features will function perfectly or that your device is fully compatible.</li>
+                <li>We are not responsible for any failure to block apps due to device limitations, OS changes, or user behavior.</li>
+            </ul>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>9. Limitation of Liability</h2>
+            <h3>Liability Cap</h3>
+            <p>To the maximum extent permitted by law, Shift Studios. shall not be liable for:</p>
+            <ul>
+                <li>Indirect, incidental, or consequential damages</li>
+                <li>Loss of data, profits, or business opportunities</li>
+            </ul>
+            <p>Our total liability shall not exceed the amount you paid to us in the 12 months preceding the claim.</p>
+        </div>
 
-  <h2>6. Intellectual Property</h2>
-  <h3>Ownership and License</h3>
-  <p>All content, trademarks, designs, and software on the App or Site are the property of Shift Studios Ltd. or our licensors.</p>
-  <p>You are granted a limited, non-exclusive, non-transferable, and revocable license to use the App and Site for personal, non-commercial purposes only.</p>
+        <div class="section">
+            <h2>10. Termination</h2>
+            <h3>Ending Your Access</h3>
+            <p>We reserve the right to suspend or terminate your access to the Services at any time, with or without notice, if we believe you have violated these Terms or for any other lawful reason.</p>
+            <p>Upon termination, all rights granted to you will immediately cease.</p>
+        </div>
 
-  <hr />
+        <div class="section">
+            <h2>11. Modifications to These Terms</h2>
+            <h3>Updates and Changes</h3>
+            <p>We may update these Terms at any time. Changes will be posted on this page with an updated "Last Updated" date. If required by law, we will notify you via the App, Site, or email.</p>
+            <p>Your continued use of the Services after changes become effective constitutes your acceptance of the revised Terms.</p>
+        </div>
 
-  <h2>7. Privacy</h2>
-  <h3>Data Practices</h3>
-  <p>Your use of the Services is subject to our <a href="https://shiftstudios.space/policies/privacy-policy">Privacy Policy</a>, which explains how we collect, use, and safeguard your personal data. By using the Services, you consent to the processing of your information in accordance with that policy.</p>
+        <div class="section">
+            <h2>12. Governing Law</h2>
+            <h3>Jurisdiction</h3>
+            <p>These Terms are governed by the laws of New Zealand. Any disputes arising out of or related to the Services shall be subject to the exclusive jurisdiction of the courts in Auckland, NZ.</p>
+        </div>
 
-  <hr />
-
-  <h2>8. Disclaimers</h2>
-  <h3>Important Notices</h3>
-  <ul>
-    <li>The Shift App is a productivity tool, not a mental health or medical service.</li>
-    <li>We do not guarantee that all features will function perfectly or that your device is fully compatible.</li>
-    <li>We are not responsible for any failure to block apps due to device limitations, OS changes, or user behavior.</li>
-  </ul>
-
-  <hr />
-
-  <h2>9. Limitation of Liability</h2>
-  <h3>Liability Cap</h3>
-  <p>To the maximum extent permitted by law, Shift Studios shall not be liable for:</p>
-  <ul>
-    <li>Indirect, incidental, or consequential damages</li>
-    <li>Loss of data, profits, or business opportunities</li>
-  </ul>
-  <p>Our total liability shall not exceed the amount you paid to us in the 12 months preceding the claim.</p>
-
-  <hr />
-
-  <h2>10. Termination</h2>
-  <h3>Ending Your Access</h3>
-  <p>We reserve the right to suspend or terminate your access to the Services at any time, with or without notice, if we believe you have violated these Terms or for any other lawful reason.</p>
-  <p>Upon termination, all rights granted to you will immediately cease.</p>
-
-  <hr />
-
-  <h2>11. Modifications to These Terms</h2>
-  <h3>Updates and Changes</h3>
-  <p>We may update these Terms at any time. Changes will be posted on this page with an updated “Last Updated” date. If required by law, we will notify you via the App, Site, or email.</p>
-  <p>Your continued use of the Services after changes become effective constitutes your acceptance of the revised Terms.</p>
-
-  <hr />
-
-  <h2>12. Governing Law</h2>
-  <h3>Jurisdiction</h3>
-  <p>These Terms are governed by the laws of New Zealand. Any disputes arising out of or related to the Services shall be subject to the exclusive jurisdiction of the courts in Auckland, NZ.</p>
-
-  <hr />
-
-  <h2>13. Contact Us</h2>
-  <p>If you have any questions about these Terms or the Services, please contact us:</p>
-  <p>Email: <a href="mailto:ericqin47286@gmail.com">ericqin47286@gmail.com</a></p>
-
-  <p class="muted">© 2025 Shift Studios</p>
+        <div class="section">
+            <h2>13. Contact Us</h2>
+            <p>If you have any questions about these Terms or the Services, please contact us:</p>
+            <p>Email: <a href="mailto:ericqin47286@gmail.com">ericqin47286@gmail.com</a></p>
+        </div>
+    </div>
 </body>
 </html>
