--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -97,6 +97,12 @@
             text-decoration: underline;
         }
 
+        hr {
+            border: none;
+            border-top: 1px solid #e5e5e5;
+            margin: 50px 0;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 40px 20px;
@@ -129,12 +135,11 @@
             <p>To use our Services, you must be at least the age of majority in your jurisdiction or have consent from a parent or guardian. By using the Services, you represent and warrant that you meet these requirements.</p>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>2. Use of the Services</h2>
-            <h3>A. Shopify Website</h3>
-            <p>The Site, hosted by Shopify, enables you to browse and purchase Shift products, including the Shift Tag. All purchases made through the Site are subject to our shipping, return, and refund policies, which are presented during checkout and incorporated into these Terms.</p>
-
-            <h3>B. Shift Mobile App</h3>
+            <h3>Shift Mobile App</h3>
             <p>The Shift App allows you to:</p>
             <ul>
                 <li>Initiate and end focus sessions</li>
@@ -147,11 +152,15 @@
             <p>We reserve the right to modify, suspend, or discontinue the App or any features at any time without notice.</p>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>3. Account Registration</h2>
             <h3>Creating an Account</h3>
             <p>You may be required to create an account or sign in with Apple ID to access certain features. You are responsible for maintaining the confidentiality of your credentials and for all activity under your account.</p>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>4. Purchases and Subscriptions</h2>
@@ -162,6 +171,8 @@
             <p>By completing a purchase, you agree to pay all applicable charges, taxes, and fees. You authorize Shift or our third-party payment processors to charge your selected payment method.</p>
             <p>If subscription services are offered, you agree to recurring billing under the terms disclosed at the time of purchase.</p>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>5. Acceptable Use</h2>
@@ -176,6 +187,8 @@
             </ul>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>6. Intellectual Property</h2>
             <h3>Ownership and License</h3>
@@ -183,11 +196,15 @@
             <p>You are granted a limited, non-exclusive, non-transferable, and revocable license to use the App and Site for personal, non-commercial purposes only.</p>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>7. Privacy</h2>
             <h3>Data Practices</h3>
             <p>Your use of the Services is subject to our Privacy Policy, which explains how we collect, use, and safeguard your personal data. By using the Services, you consent to the processing of your information in accordance with that policy.</p>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>8. Disclaimers</h2>
@@ -198,6 +215,8 @@
                 <li>We are not responsible for any failure to block apps due to device limitations, OS changes, or user behavior.</li>
             </ul>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>9. Limitation of Liability</h2>
@@ -210,12 +229,16 @@
             <p>Our total liability shall not exceed the amount you paid to us in the 12 months preceding the claim.</p>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>10. Termination</h2>
             <h3>Ending Your Access</h3>
             <p>We reserve the right to suspend or terminate your access to the Services at any time, with or without notice, if we believe you have violated these Terms or for any other lawful reason.</p>
             <p>Upon termination, all rights granted to you will immediately cease.</p>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>11. Modifications to These Terms</h2>
@@ -224,11 +247,15 @@
             <p>Your continued use of the Services after changes become effective constitutes your acceptance of the revised Terms.</p>
         </div>
 
+        <hr>
+
         <div class="section">
             <h2>12. Governing Law</h2>
             <h3>Jurisdiction</h3>
             <p>These Terms are governed by the laws of New Zealand. Any disputes arising out of or related to the Services shall be subject to the exclusive jurisdiction of the courts in Auckland, NZ.</p>
         </div>
+
+        <hr>
 
         <div class="section">
             <h2>13. Contact Us</h2>
